--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -42,6 +42,11 @@
   box-shadow: 0px 0px 5px 2px var(--shadow20);
 }
 
+@media screen and (max-width: 500px) {
+  .videoPlayer {
+    height: 100%;
+  }
+}
 /** Modal body **/
 .modalBody {
   padding: 0 3rem;
@@ -133,6 +138,13 @@
   padding: 0.5rem /* 8px */;
   display: flex;
   justify-content: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.BtnWrapperEffect :hover {
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.02);
+  filter: drop-shadow(0 0 1px var(--red10));
 }
 
 .likeBtnWrapper {
